# ros2_camera_pkgs

segmentation_node/: package.xml  setup.cfg  setup.py
segmentation_node/config/: model.param.yaml
segmentation_node/launch/: segmentation.launch.xml
segmentation_node/segmentation_node/: segmentation_node.py
